# is-the-cat-alive

./: .gitignore  README.md  pyproject.toml  script.py
cli/: main.py
quantum_model/: __init__.py  history.py  measurement.py  ops.py  state.py  time_reversal.py
tests/: test_core.py
