[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "is-the-cat-alive"
version = "0.1.0"
description = "Educational Schrödinger's cat / uncertainty regeneration simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["quantum_model", "cli"]

